fix: Prevent attachment gallery content from going out of bounds
Closes #1349

--- a/client/src/components/attachments/Attachments/Item.module.scss
+++ b/client/src/components/attachments/Attachments/Item.module.scss
@@ -8,6 +8,8 @@
     bottom: 0;
     left: 0;
     margin: auto;
+    max-height: 90%;
+    max-width: 90%;
     position: absolute;
     right: 0;
     top: 0;
@@ -19,11 +21,13 @@
   }
 
   .contentError {
+    align-items: center;
     color: #fff;
+    display: flex;
     font-size: 20px;
     font-weight: bold;
-    height: 20px;
+    justify-content: center;
+    line-height: 1.2;
     text-align: center;
-    width: 470px;
   }
 }
